--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.14.0",
     "axios": "0.20.0",
-    "bootstrap": "4.5.2",
+    "bootstrap": "^5.1.0",
     "firebase": "^7.21.0",
     "jquery": "3.5.1",
     "popper.js": "1.16.1"
