--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
-  "name": "webpack-intro",
+  "name": "webpack-5.0-template",
   "version": "1.0.0",
   "description": "",
-  "main": "src/javascripts/main.js",
+  "main": "src/scripts/main.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open",
-    "build": "webpack --mode production --module-bind js=babel-loader"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "7.11.4",
-    "@babel/preset-env": "7.11.0",
-    "babel-loader": "8.1.0",
-    "css-loader": "4.2.2",
-    "eslint": "7.7.0",
-    "eslint-config-airbnb-base": "14.2.0",
-    "eslint-loader": "4.0.2",
-    "eslint-plugin-import": "2.22.0",
-    "file-loader": "6.0.0",
-    "html-loader": "1.3.0",
-    "html-webpack-plugin": "4.3.0",
-    "mini-css-extract-plugin": "0.10.0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "10.0.1",
-    "webpack": "4.44.1",
-    "webpack-cli": "3.3.12",
-    "webpack-dev-server": "3.11.0"
+    "css-loader": "^6.2.0",
+    "css-minimizer-webpack-plugin": "^3.0.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-webpack-plugin": "^3.0.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.2.2",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.1.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.14.0",
-    "axios": "0.20.0",
+    "@popperjs/core": "^2.9.3",
+    "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
-    "firebase": "^7.21.0",
-    "jquery": "3.5.1",
-    "popper.js": "1.16.1"
+    "dotenv": "^10.0.0",
+    "firebase": "^8.2.0"
   }
 }
